--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "author": "Goyo Vargas",
   "description": "React template for future react projects",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --config webpack.config.js --open",
+    "start": "webpack-dev-server --mode development --config webpack.config.js --history-api-fallback --open --hot",
     "build": "webpack-dev-server --mode production --config webpack.config.js",
     "webpack-dev-server": "webpack-dev-server",
     "dev": "webpack-dev-server --mode development",
